# type_annotations

./: .pre-commit-config.yaml  Makefile  pyproject.toml  type_annotations.pyproj  type_annotations.sln
.github/workflows/: main.yml
type_annotations/: any.py  await.py  callable.py  class-var.py  decorator.py  dict.py  empty-tuple.py  final.py  generic.py  generic2.py  generic3.py  instance-var.py  kwargs.py  list.py  literal.py  literalstring.py  parameter.py  return.py  self.py  tuple.py  typealias.py  typed-dict.py  typed-dict2.py  typed-dict3.py  union.py  unpack.py  variable.py
