[tool.poetry]
name = "type-annotations"
version = "0.1.0"
description = ""
authors = ["Vadim Vikhrachev <vikhrachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
